# ModelicaUtilities

./: .gitignore
CallbacksImplementation/: CMakeLists.txt  CallbacksImplementation.cpp  CallbacksImplementation.h
ModelicaUtilities/: Callbacks.mo  package.order
ModelicaUtilities/Examples/: PackageConstantExample.mo  TestPackage.mo  package.order
ModelicaUtilities/Examples/Internal/: MyExternalFunction.mo  MyExternalFunction2.mo  MyExternalObject.mo  package.order
ModelicaUtilities/Resources/Include/: ModelicaUtilityFunctions.h
ModelicaUtilityFunctions/: CMakeLists.txt  ModelicaUtilityFunctions.cpp
